# putplace

./: .dockerignore  .env.example  .gitignore  .ppclient.conf.example  .readthedocs.yaml  APPRUNNER_FIXED_IP.md  APPRUNNER_QUICKSTART.md  ATLAS_CLUSTER_CONTROL.md  AWS_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  LOGO_STORAGE_GUIDE.md  README.md  SECURITY_FIXES_SUMMARY.md  apprunner.yaml  ppclient.conf  ppclient.py  pyproject.toml  tasks-apprunner.py  tasks.py
.github/workflows/: build-electron.yml  deploy-website.yml  publish-pypi.yml  publish-testpypi.yml
docs/: AUTHENTICATION.md  AWS_CREDENTIALS_SETUP.md  CHANGELOG.md  CLIENT_QUICKSTART.md  DIGITALOCEAN_DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  OAUTH_SETUP.md  README.md  SECURITY.md  STATIC_WEBSITE_SETUP.md  api-reference.md  architecture.md  client-guide.md  conf.py  configuration.md  deployment.md  development.md  index.md  installation.md  ppassist.md  quickstart.md  requirements.txt  storage.md  troubleshooting.md  user-management.md
invoke_tasks/: __init__.py  gui.py  utils.py
pp_gui_client/: README.md  package-lock.json  package.json  playwright.config.ts
pp_gui_client/src/: main.ts  preload.ts
pp_gui_client/tests/: BULK_UPLOAD_TESTING.md  README.md  e2e-bulk-upload.spec.ts  e2e-desktop-upload.spec.ts  e2e-full-workflow.spec.ts  wizard-complete-flow.spec.ts  wizard-first-launch.spec.ts
ppgui-electron/: README.md  package-lock.json  package.json  playwright.config.ts
ppgui-electron/src/: main.ts  preload.ts
ppgui-electron/tests/: electron-upload.spec.ts
src/putplace/: __init__.py  (+12 more)
tests/: TEST_SECURITY_README.md  conftest.py  test_admin_creation.py  test_api.py  test_api_endpoints.py  test_auth.py  test_client.py  test_client_config.py  test_configure.py  test_console_scripts.py  test_database.py  test_e2e.py  test_e2e_upload.py  test_email_confirmation.py  test_security_api.py  test_security_config.py  test_security_jwt.py  test_security_lockout.py  test_security_password.py  test_storage.py
website/: downloads.html  index.html
(+10 files in other folders)
